<resources>
    <string name="google_maps_key">AIzaSyB0d06aYmq6CbdganAcBjqk2iNf8Eg2jgU</string>
    <string name="app_name"><b>FreshBite</b></string>
    <string name="login">Login</string>
    <string name="signup">Daftar</string>
    <string name="welcome_description">Tetap Segar dengan FreshBite\n Sahabat Buah Anda!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_title">Masuk ke Akun\nAnda</string>
    <string name="login_message">Masukan Email dan Password untuk Login</string>
    <string name="no_account">Belum Memiliki Akun?</string>
    <string name="username">Username</string>
    <string name="title_signup_page">Buat Akun\nAnda</string>
    <string name="signup_message">Sudah Memiliki Akun?</string>
    <string name="logout">Log Out</string>
    <string name="email_error">Masukkan Email yang Valid</string>
    <string name="password_error">Password Minimal 8 Karakter</string>
    <string name="analyze">Analisa</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="freshbite">FreshBite.</string>
    <string name="profile">Profile</string>
    <string name="get_started">Lanjut</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="fruit_benefit">fruit benefit</string>
    <string name="result_fresh">Yeay! Buah anda segar dan siap dinikmati</string>
    <string name="result_rotten">Oops! Sepertinya buah anda\n sudah tidak segar</string>
    <string name="article_textview">Bosen makan buah gitu-gitu aja? Coba baca artikel di bawah ini!</string>
    <string name="tanggal">tanggal</string>
    <string name="klasifikasi">Klasifikasi</string>
    <string name="History">History</string>
    <string name="Informasi">Informasi</string>
    <string name="guest">Lanjutkan Sebagai Guest</string>
    <string name="tab_jeruk">Jeruk</string>
    <string name="tab_apel">Apel</string>
    <string name="tab_pisang">Pisang</string>
    <string name="jeruk_segar">Jeruk Segar</string>
    <string name="apel_segar">Apel Segar</string>
    <string name="pisang_segar">Pisang Segar</string>
    <string name="jeruk_busuk">Jeruk Busuk</string>
    <string name="apel_busuk">Apel Busuk</string>
    <string name="pisang_busuk">Pisang Busuk</string>
    <string name="info_jeruk_segar">
        Warna Kulit:
        \nJeruk segar biasanya memiliki warna kulit yang cerah dan seragam. Tergantung pada jenis jeruk, warna kulit bisa oranye cerah, hijau kekuningan, atau kuning keemasan. Kulitnya biasanya mengkilap dan tidak kusam
        \n\nTekstur Kulit:
        \nKulit jeruk segar terasa halus dan sedikit kenyal saat ditekan lembut. Tidak ada bercak lembut atau bagian yang terlalu lunak.
        \n\n Aroma:
        \nJeruk segar memiliki aroma yang harum dan manis. Aroma ini bisa tercium dengan jelas ketika kulitnya dipegang atau sedikit digesek.
        \n\n Berat:
        \nJeruk segar terasa lebih berat dibandingkan ukurannya, yang menandakan kandungan air yang tinggi dan daging buah yang segar.
    </string>
    <string name="info_apel_segar">
        Kulit Apel:
        \nKulit apel segar halus, tidak keriput, dan berwarna cerah. Warna bisa bervariasi tergantung varietas apel, tetapi tetap terlihat segar.
        \n\nTekstur:
        \nApel segar memiliki tekstur yang terasa keras saat ditekan,tidak lembek, dan tidak memiliki bintik-bintik cokelat atau noda hitam pada kulit.
        \n\nAroma:
        \nApel segar memiliki aroma yang segar dan wangi khas buah apel.
        \n\nRasa:
        \nApel segar memiliki rasa yang manis atau sedikit asam, tergantung pada jenis apel.
    </string>
    <string name="info_pisang_segar">
        Warna Kulit:
        \nPisang segar memiliki kulit yang berwarna kuning cerah, beberapa jenis pisang mungkin memiliki sedikit warna hijau di ujungnya yang menandakan bahwa pisang sedikit mentah.
        \n\nTekstur Kulit:
        \nKulit pisang segar terasa halus dan sedikit kenyal saat ditekan lembut, kulitnya mudah dikupas dan tidak ada bagian yang lembek atau rusak.
        \n\nAroma:
        \nPisang segar memiliki aroma yang manis dan harum. Aroma ini bisa tercium dengan jelas.
        \n\nKonsistensi Daging Buah:
        \nDaging buah pisang terasa lembut namun tetap kokoh dan tidak lembek. Pisang segar memiliki rasa manis dan tekstur yang lembut saat digigit.
    </string>
    <string name="info_jeruk_busuk">
        Warna Kulit:
        \nJeruk busuk bisa memiliki warna kulit yang kusam atau terdapat bercak-bercak cokelat, hitam, atau hijau seperti jamur.
        \n\nTekstur Kulit:
        \nKulit jeruk busuk biasanya terasa lembek dan mungkin ada bagian yang terlalu lunak atau lembek saat ditekan.
        \n\n Aroma:
        \nJeruk busuk memiliki aroma yang tidak sedap, sering kali tercium asam atau bahkan seperti bau fermentasi. Aroma yang tidak menyenangkan ini bisa tercium jelas tanpa menyentuh kulitnya.
        \n\n Berat:
        \nJeruk terasa lebih ringan dibandingkan ukurannya, menandakan bahwa sebagian besar air dan daging buah sudah hilang atau membusuk.
    </string>
    <string name="info_apel_busuk">
        Kulit Apel:
        \nApel busuk memiliki kulit yang terlihat keriput dan kusam, seringkali dengan bintik-bintik cokelat atau noda hitam.
        \n\nTekstur:
        \nApel busuk memiliki tekstur yang terasa lembek ketika ditekan, bisa ada bagian yang lunak atau berair.
        \n\nAroma:
        \nApel busuk memiliki aroma yang tidak sedap dan memiliki bau fermentasi.
        \n\nRasa:
        \nApel busuk memiliki rasa yang pahit atau asam tidak enak, terkadang rasa fermentasi.
    </string>
    <string name="info_pisang_busuk">
        Warna Kulit:
        \nPisang busuk memiliki kulit yang berwarna cokelat gelap atau hitam dengan banyak bercak.
        \n\nTekstur Kulit:
        \nKulit pisang busuk terasa lembek dan mungkin ada bagian yang terlalu lunak atau rusak saat ditekan.
        \n\nAroma:
        \nAroma pisang busuk tidak sedap dan sering kali tercium asam atau bahkan seperti bau fermentasi.
        \n\nKonsistensi Daging Buah:
        \nDaging buah pisang busuk terasa sangat lembek dan mungkin berair atau berlendir. Rasanya cenderung asam atau pahit, dan teksturnya tidak lagi enak untuk dimakan.
    </string>
    <string name="orange_benefit">
        Tahukah Kamu, jeruk memiliki beberapa manfaat loh :\n\n
        \u2022 Sumber vitamin C \n
        \u2022 Meningkatkan kekebalan tubuh \n
        \u2022 Mencegah penyakit ginjal \n
        \u2022 Membantu melancarkan pencernaan \n
        \u2022 Mengatur tekanan darah tinggi
    </string>
    <string name="apple_benefit">
        Tahukah Kamu, apel memiliki beberapa manfaat loh :\n\n
        \u2022 Menjaga kesehatan saluran pencernaan \n
        \u2022 Menjaga kesehatan dan fungsi jantung \n
        \u2022 Menurunkan resiko terkena diabetes \n
        \u2022 Menjaga kesehatan otak \n
        \u2022 Memperkuat imunitas tubuh
    </string>
    <string name="banana_benefits">
        Tahukah Kamu, pisang memiliki beberapa manfaat loh :\n\n
        \u2022 Mencegah serangan jantung \n
        \u2022 Mencegah terjadinya kanker \n
        \u2022 Mengurangi resiko terjadinya batu ginjal \n
        \u2022 Mencegah sembelit \n
        \u2022 Menurunkan berat badan
    </string>
    <string name="cari_artikel">Cari Artikel...</string>
    <string name="cari_buah">Cari Buah</string>
    <string-array name="data_title">
        <item>5 Cara Mengolah Buah Jeruk yang Bercita Rasa Asam, Gak Terbuang!</item>
        <item>6 Resep Minuman Aneka Olahan Jeruk untuk Lebaran, Segar dan Mudah Dibuat</item>
        <item>5 Resep Kreasi Jeruk yang Nggak Hanya Enak tapi Tetap Juga Sehat</item>

        <item>6 Resep Camilan Serba Apel Cocok untuk Teman Santai</item>
        <item>10 Resep olahan apel kekinian, unik, lezat, dan menyehatkan</item>
        <item>7 Inspirasi Resep Olahan Apel yang Simple dan Praktis, Cocok Buat Takjil Buka Puasa!</item>

        <item>15 Resep olahan pisang untuk jualan, enak, praktis dan bikin nagih</item>
        <item>11 Aneka Olahan Pisang yang Enak dan Mudah Dibuat di Rumah</item>
        <item>5 Resep Olahan Pisang yang Enak dan Tidak Eneg</item>
    </string-array>
    <string-array name="data_description">
        <item>Lima cara membuat olahan dari buah jeruk asam pun dapat kamu jumpai berdasarkan artikel di bawah ini.</item>
        <item>Minuman berbahan jeruk menjadi satu di antara banyak jenis minuman yang dapat menyegarkan tubuh, dinikmati dalam keadaan dingin atau hangat.</item>
        <item>Jeruk, adalah salah satu varian buah yang mudah ditemukan dimana-mana dan hampir nggak musiman </item>

        <item>Apel mungkin menjadi buah yang sangat mudah ditemui di pasar buah dengan harga dan jenis yang beraneka ragam. Apel tidak hanya bisa dimakan begitu saja, tapi juga bisa diolah menjadi berbagai macam camilan enak untuk keluarga.</item>
        <item>Apel merupakan salah satu buah yang paling banyak dikonsumsi orang. Cara mengonsumsinya pun dalam berbagai cara, ada yang memakannya langsung, ada pula yang dijadikan jus.</item>
        <item>Ada banyak resep olahan apel yang praktis untuk takjil buka puasa. Mulai dari olahan makanan hingga minuman. Jadi, apa saja resepnya? Intip disini!</item>

        <item>Salah satu bahan yang bisa kamu olah jadi beragam masakan adalah pisang. Buah satu ini bisa kamu jadi aneka camilan hingga makanan berat. Selain rasanya yang manis, tekstur buah pisang juga nggak akan berubah jika diolah menjadi kreasi makanan.</item>
        <item>Untuk kamu yang ingin mencoba memasak pisang tapi tidak ingin menu yang ribet dan sulit untuk pemula? Coba 11 aneka olahan pisang yang enak dan mudah dibuat dirumah ini.</item>
        <item>Buah pisang menjadi salah satu buah yang memiliki segudang manfaat buat kesehatan. Buah pisang bisa dikonsumsi secara langsung saat matang. Tapi juga bisa diolah menjadi berbagai camilan yang enak, lezat dan pastinya tidak eneg. </item>
    </string-array>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="operasional">Operasional</string>
    <string name="alamat">Alamat</string>
</resources>