<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.info.InfoFragment"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fresh_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fruit_basket_image"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/fresh_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/jeruk_segar"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_gravity="center"
                android:background="@drawable/green_bg"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">
                <TextView
                    android:id="@+id/fresh_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/info_jeruk_segar" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/rotten_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fruit_basket_image"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/rotten_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/jeruk_busuk"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_gravity="center"
                android:background="@drawable/red_bg"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp">
                <TextView
                    android:id="@+id/rotten_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/info_jeruk_busuk" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>