<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/option_menu"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorOnPrimary"
            android:background="?attr/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/wave"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/waves_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:maxImageSize="24dp"
        app:srcCompat="@drawable/icon_filter"
        app:tint="@color/white"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchEditText"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontal"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="text"
        android:layout_marginStart="24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/baseline_search_24"
        android:hint="@string/cari_artikel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/filterButton"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineHorizontal"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorOnTertiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:indeterminateTint="?attr/colorTertiary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/camera_page"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bg"
        android:backgroundTint="@color/green"
        app:backgroundTint="@null"
        android:drawableTop="@drawable/baseline_photo_camera_back_24"
        android:text="@string/klasifikasi"
        android:textSize="11sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/historyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mapButton"
        />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_bg"
        app:backgroundTint="@null"
        android:drawableTop="@drawable/baseline_info_outline_24"
        android:text="@string/Informasi"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/historyButton"
       />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/History"
        android:textSize="11sp"
        android:background="@drawable/green_bg"
        app:backgroundTint="@null"
        android:drawableTop="@drawable/baseline_history_24"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout"
        app:layout_constraintStart_toEndOf="@+id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/mapButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cari_buah"
        android:textSize="11sp"
        android:background="@drawable/green_bg"
        app:backgroundTint="@null"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/baseline_map_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/camera_page"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>